--- a/.github/workflows/main_ecopro-api-unique.yml
+++ b/.github/workflows/main_ecopro-api-unique.yml
@@ -28,12 +28,13 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: ./server
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./server
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,6 +52,7 @@ jobs:
         with:
           app-name: 'ecopro-api-unique'
           slot-name: 'Production'
-          package: ./server
+          package: .
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F7821A7FBB3D43C294BBCB974B1F51F4 }}
+
